--- a/Fronted/index.css
+++ b/Fronted/index.css
@@ -13,25 +13,11 @@ body {
   margin-top: 30px;
 }
 
-.slide-container {
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 60px;
+.card-container {
+    display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
 }
-
-.wrapper {
-  padding-top: 40px;
-  padding-bottom: 40px;
-  
-  
-  &:focus {
-    outline: 0;
-  }
-}
-
-
 
 .clash-card {
     background: white;
@@ -56,7 +42,7 @@ body {
 }
 
 
-.clash-card__image--barbarian img{
+.clash-card__image--paris img{
     width: 300px;
     height: 230px;
     margin-bottom: 35px;
@@ -65,62 +51,22 @@ body {
     border-top-right-radius: 14px;  
 }
 
-.clash-card__image--archer {
-  background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/archer-bg.jpg');
-  img {
-    width: 400px;
-    position: absolute;    
-    top: -34px;
-    left: -37px;
-  }
+.clash-card__image--roma img{
+    width: 300px;
+    height: 230px;
+    margin-bottom: 35px;
+    position: relative;
+    border-top-left-radius: 14px;
+    border-top-right-radius: 14px;  
 }
 
-.clash-card__image--giant {
-  background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/giant-bg.jpg');
-}
-
-.clash-card__image--giant img{
-    width: 340px;
-    position: absolute;    
-    top: -30px;
-    left: -25px;
-}
-
-
-.clash-card__image--wizard {
-  background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/wizard-bg.jpg');
-  
-}
-
-.clash-card__image--wizard img {
-    width: 345px;
-    position: absolute;    
-    top: -28px;
-    left: -10px;
-  }
-
-.clash-card__level {
-  text-transform: uppercase;
-  font-size: 12px;
-  font-weight: 700;
-  margin-bottom: 3px;
-}
-
-.clash-card__level--barbarian {
-  color: #EC9B3B;
-}
-
-.clash-card__level--archer {
-  color: #EE5487;
-}
-
-.clash-card__level--giant {
-  color: #F6901A;
-}
-
-
-.clash-card__level--wizard {
-  color: #4FACFF;
+.clash-card__image--tokio img{
+    width: 300px;
+    height: 230px;
+    margin-bottom: 35px;
+    position: relative;
+    border-top-left-radius: 14px;
+    border-top-right-radius: 14px;  
 }
 
 .clash-card__unit-name {
@@ -135,77 +81,4 @@ body {
 .clash-card__unit-description {
   padding: 20px;
   margin-bottom: 10px;  
-}
-
-.clash-card__unit-stats--barbarian {
-  background: #EC9B3B;
-}
-
-.clash-card__unit-stats--archer {
-  background: #EE5487;
-}
-
-.clash-card__unit-stats--giant {
-  background: #F6901A;
-}
-
-
-.clash-card__unit-stats--wizard {
-  background: #4FACFF;
-}
-
-.clash-card__unit-stats {
-  
-  color: white;
-  font-weight: 700;
-  border-bottom-left-radius: 14px;
-  border-bottom-right-radius: 14px;
-  
-  .one-third {
-    width: 33%;
-    float: left;
-    padding: 20px 15px;
-  }
-  
-  sup {
-    position: absolute;
-    bottom: 4px; 
-    font-size: 45%;
-    margin-left: 2px;
-  }
-  
-  .stat {
-    position: relative;
-    font-size: 24px;
-    margin-bottom: 10px;
-  }
-  
-  .stat-value {
-    text-transform: uppercase;
-    font-weight: 400;
-    font-size: 12px;
-  }
-
-  .no-border {
-    border-right: none;
-  }
-}
-
-.clearfix:after {
-	visibility: hidden;
-	display: block;
-	font-size: 0;
-	content: " ";
-	clear: both;
-	height: 0;
-}
-
-.slick-prev {
-  left: 100px;
-  z-index: 999;
-}
-
-.slick-next {
-  right: 100px;
-  z-index: 999;
 }
